welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(estSurBiscuit() == true){return true}else{return false}
        ^